--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16.x
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2#
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
       - name: build
         run: go build ./...
